	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 will not understand this new
	  format.  The automatic format conversion can be avoided by running
	  the following command on the MDS:
	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.

Severity   : enhancement
Bugzilla   : 15865
Description: Update to RHEL5 kernel-2.6.18-53.1.21.el5.

Severity   : major
Bugzilla   : 15924
Description: do not process already freed flock
Details    : flock can possibly be freed by another thread before it reaches
             to ldlm_flock_completion_ast.

Severity   : normal
Bugzilla   : 14480
Description: LBUG during stress test
Details    : Need properly lock accesses the flock deadlock detection list.

Severity   : minor
Bugzilla   : 15837
Description: oops in page fault handler
Details    : kernel page fault handler can return two special 'pages' in error case, don't
             try dereference NOPAGE_SIGBUS and NOPAGE_OMM.

Severity   : minor
Bugzilla   : 15716
Description: timeout with invalidate import.
Details    : ptlrpcd_check call obd_zombie_impexp_cull and wait request which should be
             handled by ptlrpcd. This produce long age waiting and -ETIMEOUT
             ptlrpc_invalidate_import and as result LASSERT.

Severity   : normal
Frequency  : only with broken builds/installations
Bugzilla   : 15779
Description: do not LBUG if lquota.ko and fsfilt_ldiskfs.ko are of different versions
Details    : just return an error to a user, put a console error message

Severity   : enhancement
Bugzilla   : 15741
Description: Update to RHEL5 kernel-2.6.18-53.1.19.el5.

Severity   : enhancement
Bugzilla   : 15742
Description: Update to RHEL4 kernel-2.6.9-67.0.15.

Severity   : major
Bugzilla   : 14134
Description: enable MGS and MDT services start separately
Details    : add a 'nomgs' option in mount.lustre to enable start a MDT with